--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,7 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+
+# yml config
+*.yml
 # End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij+all
