--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,13 +62,10 @@ jobs:
 
       # Deploy
       - name: Deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws deploy create-deployment \
           --application-name seefood-deploy \
           --deployment-group-name prod \
           --file-exists-behavior OVERWRITE \
-          --s3-location bucket=seefood-backend,bundleType=zip,key=$GITHUB_SHA.zip \
+          --s3-location bucket=seefood-deploy,bundleType=zip,key=$GITHUB_SHA.zip \
           --region ap-northeast-2
